--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,58 +1,116 @@
+# Project metadata
 name: workiom_technical_test
 description: "A technical test app for workiom."
-publish_to: 'none'
+publish_to: 'none'  # Don't publish to pub.dev
 
+# Version: major.minor.patch+build
 version: 1.0.0+1
 
+# Flutter SDK version constraint
 environment:
   sdk: ^3.9.2
 
+# Runtime dependencies - packages used in the app
 dependencies:
-  colorful_print: ^0.1.2
-  cupertino_icons: ^1.0.8
-  dartz: ^0.10.1
-  derry: ^1.5.0
-  dio: ^5.9.0
-  equatable: ^2.0.7
+  # Flutter SDK
   flutter:
     sdk: flutter
-  flutter_bloc: ^9.1.1
-  flutter_timezone: ^5.0.1
-  flutter_screenutil: ^5.9.3
-  flutter_secure_storage: ^9.2.4
-  flutter_svg: ^2.2.3
-  fluttertoast: ^9.0.0
-  freezed: ^3.2.3
-  freezed_annotation: ^3.1.0
-  get_it: ^9.1.1
-  google_fonts: ^6.3.2
-  injectable: ^2.7.0
-  internet_connection_checker_plus: ^2.9.1
-  json_annotation: ^4.9.0
-  logger: ^2.6.2
-  go_router: ^17.0.0
 
+  # ============================================
+  # Logging & Debugging
+  # ============================================
+  colorful_print: ^0.1.2          # Colored console output for better log readability
+  logger: ^2.6.2                  # Structured logging with levels (debug, info, warning, error)
+
+  # ============================================
+  # UI & Design System
+  # ============================================
+  cupertino_icons: ^1.0.8         # iOS-style icon set for Cupertino widgets
+  flutter_screenutil: ^5.9.3      # Responsive UI scaling for different screen sizes
+  flutter_svg: ^2.2.3             # SVG asset rendering and display
+  google_fonts: ^6.3.2            # Dynamic Google Fonts loading and caching
+
+  # ============================================
+  # Architecture & State Management
+  # ============================================
+  flutter_bloc: ^9.1.1            # BLoC pattern implementation for state management
+  equatable: ^2.0.7               # Value equality comparison for state objects
+  dartz: ^0.10.1                  # Functional programming utilities (Either, Option, etc.)
+  get_it: ^9.1.1                  # Service locator pattern for dependency injection
+  injectable: ^2.7.0              # Code generation for dependency injection annotations
+
+  # ============================================
+  # Navigation
+  # ============================================
+  go_router: ^17.0.0              # Declarative routing with deep linking support
+
+  # ============================================
+  # Networking & Connectivity
+  # ============================================
+  dio: ^5.9.0                      # Powerful HTTP client with interceptors and error handling
+  internet_connection_checker_plus: ^2.9.1  # Network connectivity status monitoring
+
+  # ============================================
+  # Local Storage & Security
+  # ============================================
+  flutter_secure_storage: ^9.2.4  # Encrypted key-value storage for sensitive data (tokens, etc.)
+
+  # ============================================
+  # Time & Timezone
+  # ============================================
+  flutter_timezone: ^5.0.1        # Device timezone detection and IANA timezone support
+
+  # ============================================
+  # User Experience Helpers
+  # ============================================
+  fluttertoast: ^9.0.0            # Toast notification messages for user feedback
+
+  # ============================================
+  # Code Generation & Data Models
+  # ============================================
+  freezed: ^3.2.3                 # Immutable data classes with union types and copyWith
+  freezed_annotation: ^3.1.0      # Annotations for freezed code generation
+  json_annotation: ^4.9.0         # Annotations for JSON serialization/deserialization
+
+  # ============================================
+  # Development Tools & Scripts
+  # ============================================
+  derry: ^1.5.0                   # Task runner for managing project scripts (see derry.yaml)
+
+# Development dependencies - only used during development/build
 dev_dependencies:
-  build_runner: ^2.10.4
-  flutter_lints: ^5.0.0
+  # Flutter testing framework
   flutter_test:
     sdk: flutter
-  injectable_generator: ^2.9.1
-  json_serializable: ^6.11.2
 
+  # ============================================
+  # Code Quality & Linting
+  # ============================================
+  flutter_lints: ^5.0.0           # Recommended linting rules for Flutter/Dart projects
+
+  # ============================================
+  # Code Generation Tools
+  # ============================================
+  build_runner: ^2.10.4           # Build system for running code generators
+  injectable_generator: ^2.9.1    # Code generator for injectable dependency injection
+  json_serializable: ^6.11.2      # Code generator for JSON serialization/deserialization
+
+# Script runner configuration (see derry.yaml for available scripts)
 scripts: derry.yaml
 
+# Flutter-specific configuration
 flutter:
-  uses-material-design: true
+  uses-material-design: true      # Enable Material Design components
 
-
+  # Asset files included in the app bundle
   assets:
-    - assets/svg/
+    - assets/svg/                 # SVG icons and graphics
 
+  # Custom fonts configuration
   fonts:
-    - family: Rubik
+    - family: Rubik               # Font family name
       fonts:
         - asset: assets/fonts/Rubik-Regular.ttf
-          weight: 400
+          weight: 400             # Font weight: Regular (400)
         - asset: assets/fonts/Rubik-Medium.ttf
-          weight: 500
+          weight: 500             # Font weight: Medium (500)
